--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,23 @@
-atomicwrites==1.3.0
-attrs==19.1.0
+alembic==1.3.1
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Classful==0.14.2
+Flask-Login==0.4.1
+Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.1
-Flask-Testing==0.7.1
+Flask-WTF==0.14.2
 idna==2.8
-importlib-metadata==0.23
 itsdangerous==1.1.0
-Jinja2==2.10.1
+Jinja2==2.10.3
+Mako==1.1.0
 MarkupSafe==1.1.1
-more-itertools==7.2.0
-packaging==19.2
-pathlib2==2.3.4
-pluggy==0.13.0
-py==1.8.0
-pyparsing==2.4.2
-pytest==5.1.3
+python-dateutil==2.8.1
+python-editor==1.0.4
 requests==2.22.0
-selenium==3.141.0
-six==1.12.0
-SQLAlchemy==1.3.8
-urllib3==1.25.6
-wcwidth==0.1.7
+six==1.13.0
+SQLAlchemy==1.3.11
+urllib3==1.25.7
 Werkzeug==0.16.0
-zipp==0.6.0
+WTForms==2.2.1
